@@ -1,63 +1,79 @@
-.TH GPDASM 1 "2012-03-04" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
-.SH NAME
+.TH "GPDASM" "1" "2014-10-19" "@PACKAGE_NAME@-@PACKAGE_VERSION@" "Linux user's manual"
+.SH "NAME"
 gpdasm \- GNU PIC disassembler
-.SH SYNOPSIS
+.SH "SYNOPSIS"
 .B gpdasm [options] file
-.SH WARNING
+.SH "WARNING"
 The information in this man page is an extract from the full documentation of
 gputils and is limited to the meaning of the options.  For complete and
 current documentation, refer to "gputils.ps" located in the gputils docs
 directory.
-.SH DESCRIPTION
+.SH "DESCRIPTION"
 .B gpdasm
-is an disassembler for Microchip (TM) PIC (TM) micro-controllers.
+is an disassembler for Microchip (TM) PIC (TM) micro\-controllers.
 .B gpdasm
 is part of gputils.  Check the
 .BR gputils (1)
 manpage for details on other GNU PIC utilities.
-.SH OPTIONS
-.TP
+.SH "OPTIONS"
+.TP 
 .BR \-c ", " \-\-mnemonics
 Decode the special mnemonics.
-.TP
+.TP 
 .BR \-h ", "\-\-help
 Show this usage message and exit.
-.TP
-.BR \-i ", "\-\-hex-info
+.TP 
+.BR \-i ", "\-\-hex\-info
 Report extra information about the input hex file. This information includes file
 size and hex format.
-.TP
-.BR "\-k FILE", " \-\-label-list FILE"
+.TP 
+.BR \-j ", "\-\-mov\-fsrn
+In the MOVIW or MOVWI instructions show as base
+the FSRn register instead of the INDFn. [INDFn]
+.TP 
+.BR "\-k FILE", " \-\-label\-list FILE"
 A file which lists the names and addresses of the labels in the disassembled
-program code. (With the -n, -o and -s options.)
-.TP
-.BR \-l ", "\-\-list-chips
+program code. (With the \-n, \-o and \-s options.)
+.TP 
+.BR \-l ", "\-\-list\-chips
 List the supported processors.
-.TP
+.TP 
 .BR \-m ", "\-\-dump
 Display the contents of instruction memory.
-.TP
+.TP 
+.BR \-n ", "\-\-show\-names
+For some case of SFR, shows the name of instead of the address. In addition
+shows the labels also.
+.TP 
+.BR \-o ", "\-\-show\-config
+Show the CONFIG and IDLOCS \- or __idlocs \- directives.
+.TP 
 .BR "\-p PROC", " \-\-processor PROC"
 Select the processor.
-.TP
+.TP 
 .BR \-s ", "\-\-short
 Output the short format. This format can be reassembled by gpasm.
-(See also the -k, -n and -o options.)
-.TP
+(See also the \-k, \-n and \-o options.)
+.TP 
 .BR \-v ", "\-\-version
 Show the version information and exit.
-.TP
+.TP 
 .BR \-y ", "\-\-extended
 Enable 18xx extended mode.
-.TP
+.TP 
 .BR "\-\-strict
-Disassemble only opcodes generated by gpasm in case of instructions with several opcodes.
-.SH SEE ALSO
+Disassemble only opcodes generated by gpasm in case of instructions with several
+opcodes.
+.SH "SEE ALSO"
 .BR gputils (1)
-.SH AUTHOR
+.SH "AUTHOR"
 Craig Franklin <craigfranklin@users.sourceforge.net>
-.SH COPYRIGHT
+
+Molnar Karoly <molnarkaroly@users.sourceforge.net>
+.SH "COPYRIGHT"
 Copyright (C) 2002, 2003, 2004, 2005 Craig Franklin
+
+Copyright (C) 2014 Molnar Karoly
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
