@@ -1,3 +1,6 @@
+2014-10-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * man/gpdasm.1.in: updated
+
 2014-10-14  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gputils/parse.y: Fixed bug #273: Compilation error in the Debian based systems
 
